--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -93,7 +93,9 @@ a {
   position: absolute;
 }
 
-
+.text-danger{
+  color:#F40505
+}
 .h-full {
   height: 100%;
 }
@@ -170,5 +172,30 @@ a {
   }
   /deep/ .el-tabs__item {
     font-weight: normal;
+  }
+}
+.table-column-disabled {
+  .el-checkbox.is-disabled {
+      .el-checkbox__inner {
+          display: none;
+      }
+      font-family: "iconfont" !important;
+      font-size: 16px;
+      &::after{
+              content: "\E62C";
+              color:#606266;
+              margin-left: 0px;
+      }
+  }
+}
+.row-state-class {
+  .el-checkbox {
+      font-family: "iconfont" !important;
+      font-size: 16px;
+      &::after{
+              content: "\E62C";
+              color:#CCD5DB;
+              margin-left: 9px;
+      }
   }
 }
