--- a/src/assets/style/sidebar.scss
+++ b/src/assets/style/sidebar.scss
@@ -5,7 +5,9 @@
     transition: margin-left .28s;
     margin-left: 180px;
     position: relative;
-
+    .iconfont {
+      color: #757E82;
+    }
 
     // position: fixed;
     height: 100%;
