--- a/public/static/jq/jOrgChart/jquery.jOrgChart.css
+++ b/public/static/jq/jOrgChart/jquery.jOrgChart.css
@@ -4,7 +4,7 @@
   margin:0 auto;
 }
 .jOrgChart .active::before{
-  content: "+";
+  content: "-";
   width: 22px;
   height: 21px;
   background: #9463F7;
@@ -18,7 +18,7 @@
   cursor: pointer;
 }
 .jOrgChart .active[cursor='s-resize']::before {
-  content: "-";
+  content: "+";
 }
 .jOrgChart .line {
   height                : 50px;
@@ -58,13 +58,16 @@
   display               : inline-block;
   padding: 0 20px;
   line-height: 40px;
-  height                : 40px;
+  /* height                : 40px; */
   z-index 				: 10;
   margin               : 0 2px;
   position: relative;
   white-space: nowrap;
 }
-
+.jOrgChart .sub-node {
+  padding:20px 0px;
+  line-height: 16px;
+}
 /* jQuery drag 'n drop */
 
 .drag-active {
