--- a/public/static/jq/jOrgChart/jquery.jOrgChart.css
+++ b/public/static/jq/jOrgChart/jquery.jOrgChart.css
@@ -3,6 +3,9 @@
 .jOrgChart table {
   margin:0 auto;
 }
+.jOrgChart .node-pd {
+  padding:0 10px;
+}
 .jOrgChart .active::before{
   content: "-";
   width: 22px;
@@ -56,7 +59,7 @@
   border:1px solid #9463F7;
   border-radius: 10px;
   display               : inline-block;
-  padding: 0 20px;
+  padding: 0 10px;
   line-height: 40px;
   /* height                : 40px; */
   z-index 				: 10;
