--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -222,3 +222,54 @@ a {
       }
   }
 }
+
+// table-main-------------------------------------------------
+
+@keyframes treeTableShow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes treeTableShow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+$color-blue: #2196f3;
+$space-width: 18px;
+.ms-tree-space {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+  width: $space-width;
+  height: 14px;
+  &::before {
+    content: "";
+  }
+}
+.processContainer {
+  width: 100%;
+  height: 100%;
+}
+.tree-ctrl {
+  position: relative;
+  cursor: pointer;
+  color: $color-blue;
+  // margin-left: -$space-width;
+  margin-left: -22px;
+}
+
+.sub-open {
+  transform: rotate(45deg);
+}
+
