--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -286,6 +286,12 @@ $space-width: 18px;
   background-color: #E4EAEC;
 }
 
+.tree {
+  font-size: 14px;
+  .el-tree-node__content {
+    height: 34px;
+  }
+}
 .el-tree-node__content {
   height: 36px;
 }
