--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -125,22 +125,22 @@ a {
 }
 
 .public-dialog {
-  /deep/ .el-dialog__header {
+   .el-dialog__header {
     background: #f5fafb;
     padding: 13px;
     font-size: 16px;
     color: #37474f;
     padding-left: 20px;
   }
-  /deep/ .el-dialog__headerbtn {
+ .el-dialog__headerbtn {
     top: 14px;
   }
-  /deep/ .el-dialog__footer {
+  .el-dialog__footer {
     padding: 0;
     border-top: 1px solid #e4eaec;
     padding: 10px 20px;
   }
-  /deep/  .el-dialog__body {
+  .el-dialog__body {
     padding: 10px 20px;
   }
   .dialog-multiple-footer {
@@ -164,7 +164,7 @@ a {
     margin-bottom: 20px;
     .input {
       margin-right: 10px;
-      /deep/ input {
+       input {
         border-radius: 40px;
       }
     }
@@ -174,33 +174,33 @@ a {
 .table-tabs {
   padding-top: 20px;
 
-  /deep/ .el-tabs__header {
+   .el-tabs__header {
     padding: 0 20px;
     margin: 0;
   }
   
-  /deep/ .el-tabs__nav-wrap {
+   .el-tabs__nav-wrap {
     &::after {
       background-color: transparent;
     }
   }
-  /deep/ .el-tabs__item {
+   .el-tabs__item {
     font-weight: normal;
   }
 }
 .form-tabs {
   padding-top:0;
-  /deep/ .el-tabs__header {
+   .el-tabs__header {
  
     margin: 0;
   }
   
-  /deep/ .el-tabs__nav-wrap {
+   .el-tabs__nav-wrap {
     &::after {
       background-color: transparent;
     }
   }
-  /deep/ .el-tabs__item {
+   .el-tabs__item {
     font-weight: normal;
   }
 }
@@ -308,5 +308,17 @@ $space-width: 18px;
     position: absolute;
     left: 50%;
     top: 0%;
+  }
+}
+
+
+.table-import-upload {
+  position: relative;
+  input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    height: 100%; 
   }
 }
