--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -181,7 +181,7 @@ a {
   
    .el-tabs__nav-wrap {
     &::after {
-      background-color: transparent;
+      background-color: #f5f5f5;
     }
   }
    .el-tabs__item {
