修改员工档案错误提示

--- a/src/assets/style/sidebar.scss
+++ b/src/assets/style/sidebar.scss
@@ -35,6 +35,8 @@
       overflow-x: hidden!important;
       .el-scrollbar__view {
         height: 100%;
+        padding-top: 20px;
+        background: rgb(48, 65, 86);
       }
     }
     .el-scrollbar__bar.is-vertical{
