员工档案增加虚拟滚动

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -324,3 +324,13 @@ $space-width: 18px;
     height: 100%; 
   }
 }
+
+.public-vxe-table{
+  &.vxe-table{
+      font-size: 12px;
+  }
+  &.vxe-table .vxe-body--column.col--ellipsis, .vxe-table.vxe-editable .vxe-body--column
+  , .vxe-table .vxe-footer--column.col--ellipsis, .vxe-table .vxe-header--column.col--ellipsis{
+      height: 26px;
+  }
+}
