--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -325,6 +325,12 @@ $space-width: 18px;
   }
 }
 
+.public-table-container{
+  margin: 10px;
+  background: #fff;
+  box-shadow:0px 3px 6px rgba(0,0,0,0.08);
+}
+
 .public-vxe-table{
   &.vxe-table{
       font-size: 12px;
