--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -162,7 +162,7 @@ a {
   }
   .side-header {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     .input {
       margin-right: 10px;
        input {
@@ -325,7 +325,8 @@ $space-width: 18px;
   }
 }
 
-.public-table-container{
+#app .app-main .public-table-container{
+  height: calc(100% - 20px);
   margin: 10px;
   background: #fff;
   box-shadow:0px 3px 6px rgba(0,0,0,0.08);
