侧边栏导航样式修改

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -325,6 +325,12 @@ $space-width: 18px;
   }
 }
 
+#app .nav-menu .el-menu-item{
+  padding: 0;
+  width: 100px;
+  text-align: center;
+}
+
 #app .app-main .public-table-container{
   height: calc(100% - 20px);
   margin: 10px;
