--- a/src/assets/style/sidebar.scss
+++ b/src/assets/style/sidebar.scss
@@ -35,7 +35,7 @@
       overflow-x: hidden!important;
       .el-scrollbar__view {
         height: 100%;
-        padding-top: 20px;
+        // padding-top: 20px;
         background: rgb(48, 65, 86);
       }
     }
