--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -59,6 +59,13 @@ ul,li{
 a {
     text-decoration: none;
 }
+// fix: table-scrollable  https://github.com/ElemeFE/element/pull/16915
+.el-table--scrollable-x .el-table__body-wrapper {
+  z-index : 1;
+}
+
+
+
 
 .white {
     color:#fff;
